--- a/SCui/App.css
+++ b/SCui/App.css
@@ -90,6 +90,7 @@
 .App-logo {
   position: relative;
   padding-left: 20px;
+  padding-bottom: 20px;
   /*animation: App-logo-spin infinite 20s linear;*/
   width: 70px; /* you can use % */
   height: auto;
@@ -161,14 +162,14 @@
 .button {
   font-size: 12px;
   font-family: 'Lucida Grande', 'Helvetica Neue', sans-serif;
-  font-weight: 900;
+  font-weight: 300;
   color: #fff;
   text-decoration: none;
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 20px;
+  margin-top: 20px;
 
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
   border-radius: 3px;
 
   -webkit-box-shadow: 0 1px 0px rgba(255,255,255,0.1) inset, 0 0px 1px rgba(0,0,0,0.7);
