--- a/SCui/signinform.css
+++ b/SCui/signinform.css
@@ -17,8 +17,8 @@ body {
     font-weight: 100;
     font-size: 12px;
     line-height: 30px;
-    color: #777;
-    background: url('images/mountain.png');
+    color: #FFFFFF;
+    background: url('images/803253_wallpapers-music-pictures.jpg');
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -43,7 +43,7 @@ body {
 }
 
 #contact {
-    background: #F9F9F9;
+    background: #000000;
     padding: 25px;
     margin: 150px 0;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
