--- a/SCui/App.css
+++ b/SCui/App.css
@@ -44,7 +44,7 @@
 
 .App {
   text-align: left;
-  background-image: url('images/drake-page.jpg');
+  background-image: url('images/27836256_10215572177645406_895399234_o-1024x576.jpg');
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
